added user auth and container list page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+.error {
+  color: red;
+  font-size: 0.8em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar_active {
+  /* color: #00000 !important ; */
+  /* background-color: rgba(255, 255, 255, 0.16); */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar_navlink {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration: none;
 }
